# ECS-Lab

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
docs/: ECS.md  ecs_lab_api.md
include/ecs_lab/: arena.hpp  component.hpp  dense_array.hpp  ecs.hpp  ecs_types.hpp  pool.hpp  signature.hpp  world.hpp
src/: ecs_lab_headers.cpp
tests/: bench_signature.cpp  test_ecs_lab.cpp
